Committing before starting a new React site

--- a/index.html
+++ b/index.html
@@ -5,31 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accent Wall Color Picker</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
     <div class="container">
         <h1>Choose Your Accent Wall Color</h1>
         <div class="room-container">
-            <!-- Room image with accent wall -->
             <div class="room">
-                <img src="images/room.jpeg" alt="Room Image" class="room-image">
+                <img src="images/room2.jpg" alt="Room Image" class="room-image">
                 <div class="accent-wall" id="accentWall"></div>
             </div>
         </div>
+        <h2 class="color-title">Select a Behr Paint Color:</h2>
         <div class="color-options">
-            <h2>Select a Behr Paint Color:</h2>
-            <div class="swatch" data-color="#F8B5FA" style="background-color: #F8B5FA;">Pink Chintz</div>
-            <div class="swatch" data-color="#FF8C00" style="background-color: #FF8C00;">Goldfish</div>
-            <div class="swatch" data-color="#FDE458" style="background-color: #FDE458;">Sun Shower</div>
-            <div class="swatch" data-color="#979A63" style="background-color: #979A63;">River Bank</div>
-            <div class="swatch" data-color="#2AADC4" style="background-color: #2AADC4;">Riviera Paradise</div>
-            <div class="swatch" data-color="#3D5BA0" style="background-color: #3D5BA0;">Enduring</div>
-            <div class="swatch" data-color="#614799" style="background-color: #614799;">Gala Ball</div>
-            <div class="swatch" data-color="#3C3C3D" style="background-color: #3C3C3D;">Limousine Leather</div>
-            <!-- Add more swatches as needed -->
+            <div class="swatch-container">
+                <div class="swatch" data-color="#F8B5FA" style="background-color: #F8B5FA;"></div>
+                <span class="swatch-label">Pink Chintz</span>
+            </div>
+            <div class="swatch-container">
+                <div class="swatch" data-color="#F44A4E" style="background-color: #F44A4E;"></div>
+                <span class="swatch-label">Wet Coral</span>
+            </div>
+            <div class="swatch-container">
+                <div class="swatch" data-color="#EE9E89" style="background-color: #EE9E89;"></div>
+                <span class="swatch-label">Ceramic Glaze</span>
+            </div>
+            <div class="swatch-container">
+                <div class="swatch" data-color="#FDE458" style="background-color: #FDE458;"></div>
+                <span class="swatch-label">Sun Shower</span>
+            </div>
+            <div class="swatch-container">
+                <div class="swatch" data-color="#B1CF65" style="background-color: #B1CF65;"></div>
+                <span class="swatch-label">Grass Cloth</span>
+            </div>
+            <div class="swatch-container">
+                <div class="swatch" data-color="#979A63" style="background-color: #979A63;"></div>
+                <span class="swatch-label">River Bank</span>
+            </div>
+            <div class="swatch-container">
+                <div class="swatch" data-color="#2AADC4" style="background-color: #2AADC4;"></div>
+                <span class="swatch-label">Riviera Paradise</span>
+            </div>
+            <div class="swatch-container">
+                <div class="swatch" data-color="#3D5BA0" style="background-color: #3D5BA0;"></div>
+                <span class="swatch-label">Enduring</span>
+            </div>
+            <div class="swatch-container">
+                <div class="swatch" data-color="#A290CD" style="background-color: #A290CD;"></div>
+                <span class="swatch-label">Garden Flower</span>
+            </div>
+            <div class="swatch-container">
+                <div class="swatch" data-color="#3C3C3D" style="background-color: #3C3C3D;"></div>
+                <span class="swatch-label">Limousine Leather</span>
+            </div>
         </div>
     </div>
+    
 
     <script src="script.js"></script>
 </body>
 </html>
+
